--- a/index.html
+++ b/index.html
@@ -5,35 +5,25 @@
     <meta charset="utf-8" />
     <title>NatyM - Desenvolvedora Web</title>
     <link rel="stylesheet" href="css/normalize.css" />
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type="text/css"/>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type="text/css" />
     <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
-    <div class="heade">
+    <div class="header">
         <div class="linha">
             <header>
-                <div clas="coluna col4">
+                <div class="coluna col4">
                     <h1 class="logo">NatyM</h1>
                 </div>
-                <div clas="coluna col8">
+                <div class="coluna col8">
                     <nav>
                         <ul class="menu inline sem-marcador">
-                            <li>
-                                <a href="index.html">Home</a>
-                            </li>
-                            <li>
-                                <a href="clientes.html">Clientes</a>
-                            </li>
-                            <li>
-                                <a href="servicos.html">Serviços</a>
-                            </li>
-                            <li>
-                                <a href="sobre.html">Sobre</a>
-                            </li>
-                            <li>
-                                <a href="contato.html">Contato</a>
-                            </li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="clientes.html">Clientes</a></li>
+                            <li><a href="servicos.html">Serviços</a></li>
+                            <li><a href="sobre.html">Sobre</a></li>
+                            <li><a href="contato.html">Contato</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -42,31 +32,21 @@
     </div>
     <div class="linha">
         <section>
-            <div clas="coluna col3 sidebar">
-                <h3>Clinetes Satisfeitos</h3>
+            <div class="coluna col3 sidebar">
+                <h3>Clietes Satisfeitos</h3>
                 <ul class="sem-marcador sem-padding">
-                    <li>
-                        <a href="">Nome da Empresa 1</a>
-                    </li>
-                    <li>
-                        <a href="">Nome da Empresa 1</a>
-                    </li>
-                    <li>
-                        <a href="">Nome da Empresa 1</a>
-                    </li>
-                    <li>
-                        <a href="">Nome da Empresa 1</a>
-                    </li>
-                    <li>
-                        <a href="">Nome da Empresa 1</a>
-                    </li>
+                    <li><a href="">Nome da Empresa 1</a></li>
+                    <li><a href="">Nome da Empresa 1</a></li>
+                    <li><a href="">Nome da Empresa 1</a></li>
+                    <li><a href="">Nome da Empresa 1</a></li>
+                    <li><a href="">Nome da Empresa 1</a></li>
+                    <li><a href="">Nome da Empresa 1</a></li>
+                    <li><a href="">Nome da Empresa 1</a></li>
                 </ul>
                 <a href="cliente.html" class="botao">Ver todos &raquo;</a>
             </div>
             <div class="coluna col9">
-                <h2>Ultimo trabalho:
-                    <em>Empresa ABC</em>
-                </h2>
+                <h2>Ultimo trabalho:<em>Empresa ABC</em></h2>
                 <img src="img/fom.jpg" alt="" />
                 <p> Não fique pensando no que não tem. </br>
                     Agradeça pelo que já conquistou.</br>
@@ -80,7 +60,7 @@
 
     <div class="conteudo-extra">
         <div class="linha">
-            <div clas="coluna col7">
+            <div class="coluna col7">
                 <section>
 
                     <h2>Como um site pode ajudar sua empresa?</h2>
@@ -89,7 +69,7 @@
                         de ser algo opcional para ser algo que, na maioria dos casos, </br>
                         é uma das primeiras etapas obrigatórias da abertura de uma empresa.</br>
                         Atualmente, uma empresa que não possui um site levanta questões sobre</br>
-                        a sua existência e legitimidade.</br>
+                        a sua existência e legitimidade.</br></p>
 
                 </section>
             </div>
@@ -102,7 +82,7 @@
                         <p>O sucesso nasce do querer, da determinação e </br>
                             persistência em se chegar a um objetivo. </br>
                             Mesmo não atingindo o alvo, quem busca e vence obstáculos,</br>
-                            no mínimo fará coisas admiráveis.</p>
+                            no mínimo fará coisas admiráveis.<a href="">Leia mais &raquo;</a></p>
                     </li>
                     <li>
                         <img src="img/cer.jpg" alt="" />
@@ -110,7 +90,7 @@
                         <p>O sucesso nasce do querer, da determinação e </br>
                             persistência em se chegar a um objetivo. </br>
                             Mesmo não atingindo o alvo, quem busca e vence obstáculos,</br>
-                            no mínimo fará coisas admiráveis.</p>
+                            no mínimo fará coisas admiráveis.<a href="">Leia mais &raquo;</a></p>
                     </li>
                     <li>
                         <img src="img/cer.jpg" alt="" />
@@ -118,36 +98,20 @@
                         <p>O sucesso nasce do querer, da determinação e </br>
                             persistência em se chegar a um objetivo. </br>
                             Mesmo não atingindo o alvo, quem busca e vence obstáculos,</br>
-                            no mínimo fará coisas admiráveis.</p>
+                            no mínimo fará coisas admiráveis.<a href="">Leia mais &raquo;</a></p>
                     </li>
-
-
                 </ul>
-
             </div>
         </div>
-
     </div>
     <div class="footer">
         <div class="linha">
             <footer>
                 <div class="coluna col12">
                     <span>&copy; 2018 - NatyM - Desenvolvedora Web</span>
-
+                </div>
             </footer>
-            
-
-
         </div>
-
-
-
     </div>
-
-
-
-
-
 </body>
-
 </html>
