--- a/clientes.html
+++ b/clientes.html
@@ -33,7 +33,7 @@
             <h2>Veja quem contratou</h2>
             <div class="coluna col6">
                 <h4> Nome da Empresa 1</h4>
-                <img src="luz.jpg" alt=""/>
+                <img src="img/luz.jpg" alt=""/>
                 <p>
                   Um dia você ainda vai olhar pra trás e ver que os problemas eram,
                    na verdade, os degraus que te levaram à vitória.
@@ -41,12 +41,53 @@
             </div> 
             <div class="coluna col6">
               <h4> Nome da Empresa 2</h4>
-              <img src="luz.jpg" alt=""/>
+              <img src="img/luz.jpg" alt=""/>
               <p>
                 Dificuldades preparam pessoas comuns para destinos extraordinários.
               </p>
           </div>
-
+          <div class="coluna col4">
+            <h4> Nome da Empresa 3</h4>
+            <img src="img/luz.jpg" alt=""/>
+            <p>
+              Dificuldades preparam pessoas comuns para destinos extraordinários.
+            </p>
+        </div>
+        <div class="coluna col4">
+            <h4> Nome da Empresa 4</h4>
+            <img src="img/luz.jpg" alt=""/>
+            <p>
+              Dificuldades preparam pessoas comuns para destinos extraordinários.
+            </p>
+        </div>
+        <div class="coluna col4">
+          <h4> Nome da Empresa 5</h4>
+          <img src="img/luz.jpg" alt=""/>
+          <p>
+            Dificuldades preparam pessoas comuns para destinos extraordinários.
+          </p>
+      </div>  
+      <div class="coluna col4">
+        <h4> Nome da Empresa 6</h4>
+        <img src="img/luz.jpg" alt=""/>
+        <p>
+          Dificuldades preparam pessoas comuns para destinos extraordinários.
+        </p>
+    </div>
+    <div class="coluna col4">
+      <h4> Nome da Empresa 7</h4>
+      <img src="img/luz.jpg" alt=""/>
+      <p>
+        Dificuldades preparam pessoas comuns para destinos extraordinários.
+      </p>
+  </div>  
+  <div class="coluna col4">
+    <h4> Nome da Empresa 8</h4>
+    <img src="img/luz.jpg" alt=""/>
+    <p>
+      Dificuldades preparam pessoas comuns para destinos extraordinários.
+    </p>
+</div>
 
         </section>
     </div>
@@ -54,11 +95,43 @@
     <div class="conteudo-extra">
         <div class="linha">
             <div class="coluna col7">
-                <section>
-                </section>
+                    <section>
+                            <h2>Opinião de quem contratou</h2>
+                            <p>“A lógica pode levar de um ponto A a um ponto B.</p>
+                            <p>   A imaginação pode levar a qualquer lugar”</p>
+                            <p><em>Albert Einstein - Cientista</em></p>
+                    </section>
             </div>
+
             <div class="coluna col5">
-            </div>
+                    <h3>Últimas noticias</h3>
+                    <ul class="sem-marcador sem padding noticias">
+                        <li>
+                            <img src="img/cer.jpg" alt="" />
+                            <h4> Titulo da noticia publicada no blog </h4>
+                            <p>O sucesso nasce do querer, da determinação e </br>
+                                persistência em se chegar a um objetivo. </br>
+                                Mesmo não atingindo o alvo, quem busca e vence obstáculos,</br>
+                                no mínimo fará coisas admiráveis.<a href="">Leia mais &raquo;</a></p>
+                        </li>
+                        <li>
+                            <img src="img/cer.jpg" alt="" />
+                            <h4> Titulo da noticia publicada no blog </h4>
+                            <p>O sucesso nasce do querer, da determinação e </br>
+                                persistência em se chegar a um objetivo. </br>
+                                Mesmo não atingindo o alvo, quem busca e vence obstáculos,</br>
+                                no mínimo fará coisas admiráveis.<a href="">Leia mais &raquo;</a></p>
+                        </li>
+                        <li>
+                            <img src="img/cer.jpg" alt="" />
+                            <h4> Titulo da noticia publicada no blog </h4>
+                            <p>O sucesso nasce do querer, da determinação e </br>
+                                persistência em se chegar a um objetivo. </br>
+                                Mesmo não atingindo o alvo, quem busca e vence obstáculos,</br>
+                                no mínimo fará coisas admiráveis.<a href="">Leia mais &raquo;</a></p>
+                        </li>
+                    </ul>
+                </div>
         </div>
     </div>
     <div class="footer">
