:art:<@NatyMoraes> Refatora pag Contato

--- a/contato.html
+++ b/contato.html
@@ -35,70 +35,50 @@
             <div class="coluna col5 sidebar">
                 <h3>Localização</h3>
                 <img src="img/mapa.jpg" alt="">
-                <ul class="sem-marcador sem padding noticias">
+                <ul class="sem-marcador sem padding">
                     <li>Rua</li>
                     <li>Bairro</li>
                     <li>Cidade - Estado</li>
                 </ul>
+                <h3>Contato direto</h3>
+                <ul class="sem-marcador sem padding">
+                    <li>Fone: <strong>(00) 9999-9999 </strong> </li>
+                    <li>Email: <strong>naty.moraes16@gmail.com </strong> </li>
+                    <li>linkdIn: <strong> www.linkedin.com/in/nataliadasilvamoraes </strong> </li>
+                </ul>
             </div>
+
             <div class="coluna col7">
-                    <h2>Codificação Front-End</h2>
-                <p> Não fique pensando no que não tem. </br>
-                    Agradeça pelo que já conquistou.</br>
-                    Ainda que seja uma simples caixa de lápis de cor.</br>
-                    com ela, dá para desenhar o mundo.</br>
-                </p> 
-                    <h2>desenvolvimento de Software</h2>
-                <p> Não fique pensando no que não tem. </br>
-                    Agradeça pelo que já conquistou.</br>
-                    Ainda que seja uma simples caixa de lápis de cor.</br>
-                    com ela, dá para desenhar o mundo.</br>
-                </p>
-                    <h2>Metodos Ageis</h2>
-                <p> Não fique pensando no que não tem. </br>
-                    Agradeça pelo que já conquistou.</br>
-                    Ainda que seja uma simples caixa de lápis de cor.</br>
-                    com ela, dá para desenhar o mundo.</br>
-                </p>
-                    <h2>Pair Programming</h2>
-                <p> Não fique pensando no que não tem. </br>
-                    Agradeça pelo que já conquistou.</br>
-                    Ainda que seja uma simples caixa de lápis de cor.</br>
-                    com ela, dá para desenhar o mundo.</br>
-                </p>
-                    <h2>JavaScript/HTML/CSS</h2>
-                <p> Não fique pensando no que não tem. </br>
-                    Agradeça pelo que já conquistou.</br>
-                    Ainda que seja uma simples caixa de lápis de cor.</br>
-                    com ela, dá para desenhar o mundo.</br>
-                </p>
-                <h2>GIT/GITHUB</h2>
-                <p> Não fique pensando no que não tem. </br>
-                    Agradeça pelo que já conquistou.</br>
-                    Ainda que seja uma simples caixa de lápis de cor.</br>
-                    com ela, dá para desenhar o mundo.</br>
-                </p>
-                <h2>Windows/Linux</h2>
-                <p> Não fique pensando no que não tem. </br>
-                    Agradeça pelo que já conquistou.</br>
-                    Ainda que seja uma simples caixa de lápis de cor.</br>
-                    com ela, dá para desenhar o mundo.</br>
-                </p>
+                 <h2>Envie Sua Mensagem</h2>
+              <form action="">
+                  <label for="nome">Seu nome:</label>
+                  <input type="text" name="nome" id="nome" />
+
+                  <label for="email">Seu email:</label>
+                  <input type="text" name="email" id="email" />
+
+                  <label for="assunto">Assunto:</label>
+                  <input type="text" name="assunto" id="assunto" />
+
+                  <label for="mensagem">Mensagem:</label>
+                  <textarea name"mensagem" id="mensagem"></textarea>
+                  <input type="text" class="botao" name="Enviar Mensagem &raquo;" />
+              </form>
             </div>
         </section>
     </div>
+
+
     <div class="conteudo-extra">
         <div class="linha">
             <div class="coluna col7">
                 <section>
 
-                    <h2>Como conquistar clientes na era digital</h2>
-
-                    <p> A presença digital de uma empresa já deixou há muito tempo </br>
-                        de ser algo opcional para ser algo que, na maioria dos casos, </br>
-                        é uma das primeiras etapas obrigatórias da abertura de uma empresa.</br>
-                        Atualmente, uma empresa que não possui um site levanta questões sobre</br>
-                        a sua existência e legitimidade.</br></p>
+                    <h2>Método alternativo de contato</h2>
+                    <p> Alternativo
+                        <p><em>Adjetivo</em></p>
+                        <p> 1.Que se diz, faz ou ocorre com alternância.</p>
+                        <p> 2.Que oferece possibilidade de escolha, de opção.</p>
 
                 </section>
             </div>
