<@natymoraes> Refatora CSS

--- a/contato.html
+++ b/contato.html
@@ -35,34 +35,31 @@
             <div class="coluna col5 sidebar">
                 <h3>Localização</h3>
                 <img src="img/mapa.jpg" alt="">
-                <ul class="sem-marcador sem padding">
+                <ul class="sem-marcador sem-padding">
                     <li>Rua</li>
                     <li>Bairro</li>
                     <li>Cidade - Estado</li>
                 </ul>
                 <h3>Contato direto</h3>
-                <ul class="sem-marcador sem padding">
+                <ul class="sem-marcador sem-padding">
                     <li>Fone: <strong>(00) 9999-9999 </strong> </li>
                     <li>Email: <strong>naty.moraes16@gmail.com </strong> </li>
                     <li>linkdIn: <strong> www.linkedin.com/in/nataliadasilvamoraes </strong> </li>
                 </ul>
             </div>
 
-            <div class="coluna col7">
+            <div class="coluna col7 contato">
                  <h2>Envie Sua Mensagem</h2>
               <form action="">
                   <label for="nome">Seu nome:</label>
-                  <input type="text" name="nome" id="nome" />
-
+                    <input type="text" name="nome" id="nome" />
                   <label for="email">Seu email:</label>
-                  <input type="text" name="email" id="email" />
-
+                     <input type="text" name="email" id="email" />
                   <label for="assunto">Assunto:</label>
-                  <input type="text" name="assunto" id="assunto" />
-
+                     <input type="text" name="assunto" id="assunto" />
                   <label for="mensagem">Mensagem:</label>
                   <textarea name"mensagem" id="mensagem"></textarea>
-                  <input type="text" class="botao" name="Enviar Mensagem &raquo;" />
+                    <input type="submit" class="botao" name="enviar" value="Enviar Mensagem &raquo;" />
               </form>
             </div>
         </section>
