--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <li><a href="">Nome da Empresa 1</a></li>
                     <li><a href="">Nome da Empresa 1</a></li>
                 </ul>
-                <a href="cliente.html" class="botao">Ver todos &raquo;</a>
+                <a href="clientes.html" class="botao">Ver todos &raquo;</a>
             </div>
             <div class="coluna col9">
                 <h2>Ultimo trabalho:<em>Empresa ABC</em></h2>
@@ -53,7 +53,8 @@
                     Ainda que seja uma simples caixa de lápis de cor.</br>
                     com ela, dá para desenhar o mundo.</br>
                 </p>
-                <a href="clientes.html" class="botão">Ver outros trabalhos &raquo;</a>
+                <a href="clientes.html" class="botao">Ver outros trabalhos &raquo;</a>
+                
             </div>
         </section>
     </div>
